--- a/Clients/templates/Clientsapp/home.html
+++ b/Clients/templates/Clientsapp/home.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %}
 
-{% block title %}Pets Home{% endblock %}
+{% block title %}Gym Client Management Home{% endblock %}
 
 {% block content %}
 
-<h2>Welcome to PetStore Home page</h2>
-<p>This particular page shows the home/ dashboard information for the pet store project.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quia unde ea saepe fugit alias in minima. Debitis vel dolorem laudantium voluptatem adipisci in praesentium harum fugit, ad ducimus. Ad, ratione. Odio mollitia quos repudiandae. Error, dolor, dignissimos consectetur, possimus quae amet harum fugiat doloribus dolore unde enim molestias nulla mollitia hic.</p>
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quia unde ea saepe fugit alias in minima. Debitis vel dolorem laudantium voluptatem adipisci in praesentium harum fugit, ad ducimus. Ad, ratione. Odio mollitia quos repudiandae. Error, dolor, dignissimos consectetur, possimus quae amet harum fugiat doloribus dolore unde enim molestias nulla mollitia hic? Adipisci iure, quam deserunt omnis consequatur earum perferendis impedit mollitia inventore sunt repellendus vel autem eius corporis in, harum assumenda? Libero, consequatur eligendi. Quod officia inventore corrupti neque dolorum nemo. Culpa vitae corrupti animi facilis officia rem officiis, repudiandae enim veritatis magnam aut, nihil quas quis repellat illo.</p>
-
+<div class="container">
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to Gym Client Management</h1>
+        <p class="lead">This page serves as the home/dashboard for the Gym Client Management system.</p>
+        <hr class="my-4">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quia unde ea saepe fugit alias in minima. Debitis vel dolorem laudantium voluptatem adipisci in praesentium harum fugit, ad ducimus. Ad, ratione. Odio mollitia quos repudiandae. Error, dolor, dignissimos consectetur, possimus quae amet harum fugiat doloribus dolore unde enim molestias nulla mollitia hic.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quia unde ea saepe fugit alias in minima. Debitis vel dolorem laudantium voluptatem adipisci in praesentium harum fugit, ad ducimus. Ad, ratione. Odio mollitia quos repudiandae. Error, dolor, dignissimos consectetur, possimus quae amet harum fugiat doloribus dolore unde enim molestias nulla mollitia hic? Adipisci iure, quam deserunt omnis consequatur earum perferendis impedit mollitia inventore sunt repellendus vel autem eius corporis in, harum assumenda? Libero, consequatur eligendi. Quod officia inventore corrupti neque dolorum nemo. Culpa vitae corrupti animi facilis officia rem officiis, repudiandae enim veritatis magnam aut, nihil quas quis repellat illo.</p>
+    </div>
+</div>
 
 {% endblock %}
