--- a/Clients/templates/base.html
+++ b/Clients/templates/base.html
@@ -1,37 +1,39 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Gym Management System</title>
-        <link rel="icon" href="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsb2ZmaWNlMThfaGFwcHlfc21pbGluZ19nb2xkZW5fcmV0cml2ZXJfcHVwcHlfb25fd2hpdGVfYl8xOTAzYWI3Ni04NjQzLTQxNzYtODY3ZS01MjUxNDk1MGExNTMucG5n.png">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"&gt;>
-        <!---<link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">--->
-    </head>
-    <body>
-        <header>
-            {% include 'Clientsapp/nav.html' %}
-        </header>
-        <div class="container">
+<head>
+    <title>Gym Client Management System</title>
+    <link rel="icon" href="https://cdn.fitimg.in/studio_logo_7C5F98EA46D9B7.jpg">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+    <header>
+        {% include 'Clientsapp/nav.html' %}
+    </header>
+    <div class="container">
 
-            {% block content %}
+        {% block content %}
 
-            Welcome to the gym management system. 
-            This system is designed and developed in Django.
-
-            {%  endblock%}
-
+        <div class="jumbotron">
+            <h1 class="display-4">Welcome to the Gym Client Management System</h1>
+            <p class="lead">This system is designed and developed in Django.</p>
+            <hr class="my-4">
+            <p>It provides features for managing gym clients, including adding plans, managing member details, and handling enquiries.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </div>
-        
-        <footer class="footer bg-dark text-light text-center py-3">
-            <div class="container">
-                <p>&copy; 2024 Gym Management System: Atharva</p>
-            </div>
-        </footer>
-        
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
-    <body>
-</html>
 
+        {% endblock %}
+
+    </div>
+    
+    <footer class="footer bg-dark text-light text-center py-3">
+        <div class="container">
+            <p>&copy; 2024 Gym Management System: Atharva</p>
+        </div>
+    </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
