updated Navbar and other small things

--- a/Clients/templates/base.html
+++ b/Clients/templates/base.html
@@ -26,11 +26,12 @@
 
     </div>
     
-    <footer class="footer bg-dark text-light text-center py-3">
-        <div class="container">
-            <p>&copy; 2024 Gym Management System: Atharva</p>
+    <footer class="bg-dark text-white py-4">
+        <div class="container text-center">
+            <p class="lead mb-0">PowerFit &copy; 2023. All rights reserved.</p>
         </div>
     </footer>
+    
     
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
