--- a/Clients/templates/Clientsapp/nav.html
+++ b/Clients/templates/Clientsapp/nav.html
@@ -13,7 +13,7 @@
                     <a class="nav-link" href="{% url 'plan_view' %}" style="font-size: 20px;">View Plans</a>
                 </li>
                 {% if request.user.is_authenticated %}
-                    {% if request.user.is_staff %}
+                                {% if request.user.is_staff %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'add_plan' %}" style="font-size: 20px;">Add Plan</a>
                         </li>
@@ -48,10 +48,14 @@
                                 {% endif %}
                         </li>
                     {% endif %}
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}" style="font-size: 20px;">Logout</a>
                     </li>
                 {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}" style="font-size: 20px;">Register</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}" style="font-size: 20px;">Login</a>
                     </li>
