--- a/Clients/templates/Clientsapp/add_member.html
+++ b/Clients/templates/Clientsapp/add_member.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %} Add Member {% endblock %}
+{% block title %} Join Membership {% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h2 class="mt-4 mb-4">Add Member</h2>
+            <h2 class="mt-4 mb-4">Join Membership</h2>
             <form method="post" enctype="multipart/form-data" id="member-form">
                 {% csrf_token %}
                 <div class="form-group">
