--- a/Clients/templates/Clientsapp/Adding/add_member.html
+++ b/Clients/templates/Clientsapp/Adding/add_member.html
@@ -33,8 +33,9 @@
                     <label for="id_plan">Plan</label>
                     {{ form.plan }}
                 </div>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-warning">Make Payment</button>
             </form>
+            <br>
         </div>
     </div>
 </div>
