--- a/Clients/templates/Clientsapp/home.html
+++ b/Clients/templates/Clientsapp/home.html
@@ -17,7 +17,7 @@
         {% for plan in plans %}
             <li class="list-group-item">
                 <div class="d-flex w-100 justify-content-between">
-                    <h2><a href="#" style="text-decoration: none;">{{ plan.name }}</a></h2>
+                    <h2>{{ plan.name }}</h2>
                     <h3> {{ plan.amount }} Rs</h3>
                     <h4>{{ plan.duration }}</h4>
                 </div>
