--- a/Clients/templates/Clientsapp/Adding/add_enquiry.html
+++ b/Clients/templates/Clientsapp/Adding/add_enquiry.html
@@ -9,23 +9,8 @@
             <h2 class="mt-4 mb-4">Add Enquiry</h2>
             <form method="post" enctype="multipart/form-data" id="enquiry-form">
                 {% csrf_token %}
-                <div class="form-group">
-                    <label for="id_name">Name</label>
-                    {{ form.name }}
-                </div>
-                <div class="form-group">
-                    <label for="id_email">Email</label>
-                    {{ form.email }}
-                </div>
-                <div class="form-group">
-                    <label for="id_subject">Subject</label>
-                    {{ form.subject }}
-                </div>
-                <div class="form-group">
-                    <label for="id_message">Message</label>
-                    {{ form.message }}
-                </div>
-                <button type="submit" class="btn btn-primary">Save</button>
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-warning">Inform Us!</button>
             </form>
             <br>
         </div>
