--- a/Clients/templates/Clientsapp/Viewing/view_members.html
+++ b/Clients/templates/Clientsapp/Viewing/view_members.html
@@ -7,6 +7,13 @@
     <div class="row">
         <div class="col-md-10 offset-md-1">
             <h2 class="text-center mb-4">Members Joined</h2>
+            <form class="form-inline mb-4" action="{% url 'member_results' %}" method="get">
+                <div class="form-group mr-2">
+                    <input type="text" name="member_search" class="form-control"
+                    placeholder="Search By Name" value="{{ member_query }}">
+                </div>
+                <button type="submit" class="btn btn-primary">Search</button>
+            </form>
             <div class="card">
                 <ul class="list-group list-group-flush">
                     {% for member in members %}
