--- a/Clients/templates/Clientsapp/home.html
+++ b/Clients/templates/Clientsapp/home.html
@@ -24,7 +24,7 @@
             </li>
         {% endfor %}
         <br>
-        <h1>Enquiry</h1><hr>
+        <h1>Enquiry :</h1><hr>
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-3">
