--- a/Clients/templates/Clientsapp/Viewing/view_enquiry.html
+++ b/Clients/templates/Clientsapp/Viewing/view_enquiry.html
@@ -7,13 +7,13 @@
     <div class="row">
         <div class="col-md-10 offset-md-1">
             <h2 class="text-center mb-4">View Enquiries</h2>
-            <!-- <form class="form-inline mb-4" action="" method="GET">
+            <form class="form-inline mb-4" action="" method="GET">
                 <div class="form-group mr-2">
                     <input type="text" name="enquiry_search" class="form-control" 
                     placeholder="Search by name" value="">
                 </div>
                 <button type="submit" class="btn btn-primary">Search</button>
-            </form>    -->
+            </form> 
             <div class="card">
                 <ul class="list-group list-group-flush">
                     {% for enquiry in enquiries %}
