--- a/Clients/templates/Clientsapp/Viewing/plan_view.html
+++ b/Clients/templates/Clientsapp/Viewing/plan_view.html
@@ -21,6 +21,10 @@
                     <h3> {{ plan.amount }} Rs</h3>
                     <h4>{{ plan.duration }}</h4>
                     {% if request.user.is_staff %}
+                    <form method="post" action="{% url 'update_plan' plan.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-warning">Update</button>
+                    </form>
                     <form method="post" action="{% url 'remove_from_plan' plan.id %}">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger">Remove</button>
