--- a/Clients/templates/Clientsapp/Viewing/view_enquiry.html
+++ b/Clients/templates/Clientsapp/Viewing/view_enquiry.html
@@ -7,10 +7,10 @@
     <div class="row">
         <div class="col-md-10 offset-md-1">
             <h2 class="text-center mb-4">View Enquiries</h2>
-            <form class="form-inline mb-4" action="" method="GET">
+            <form class="form-inline mb-4" action="{% url 'enquiry_results' %}" method="GET">
                 <div class="form-group mr-2">
                     <input type="text" name="enquiry_search" class="form-control" 
-                    placeholder="Search by name" value="">
+                    placeholder="Search by name" value="{{ enquiry_query }}">
                 </div>
                 <button type="submit" class="btn btn-primary">Search</button>
             </form> 
@@ -24,7 +24,7 @@
                                     <p><strong>Email:</strong> {{ enquiry.email }}</p>
                                     <p><strong>Subject:</strong> {{ enquiry.subject }}</p>
                                     <p><strong>Message:</strong> {{ enquiry.message }}</p>
-                                    <p><strong>Created On:</strong> {{ enquiry.created_on|date:"F d, Y" }}</p>
+                                    <p><strong>Created On:</strong> {{ enquiry.created_on|date:"F d, Y" }}</p>                                
                                     {% if request.user.is_staff %}
                                     <form action="{% url 'remove_from_enquiry' enquiry.id %}" method="post">
                                         {% csrf_token %}
