--- a/Clients/templates/Clientsapp/Viewing/view_members.html
+++ b/Clients/templates/Clientsapp/Viewing/view_members.html
@@ -35,6 +35,14 @@
                                         </div>
                                         <div class="card-body">
                                             {% if request.user.is_staff %}
+                                            <form method="post" action="{% url 'update_member' member.id %}" class="col-md-5">
+                                                {% csrf_token %}
+                                                <button type="submit" class="btn btn-warning">Update</button>
+                                            </form>
+                                            {% endif %}
+                                        </div>
+                                        <div class="card-body">
+                                            {% if request.user.is_staff %}
                                             <form method="post" action="{% url 'remove_from_member' member.id %}" class="col-md-5">
                                                 {% csrf_token %}
                                                 <button type="submit" class="btn btn-danger">Remove</button>
