--- a/Clients/templates/Clientsapp/Adding/add_enquiry.html
+++ b/Clients/templates/Clientsapp/Adding/add_enquiry.html
@@ -10,7 +10,7 @@
             <form method="post" enctype="multipart/form-data" id="enquiry-form">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit" class="btn btn-warning">Inform Us!</button>
+                <button type="submit" class="btn btn-primary">Inform Us!</button>
             </form>
             <br>
         </div>
