--- a/Clients/templates/Clientsapp/Viewing/view_enquiry.html
+++ b/Clients/templates/Clientsapp/Viewing/view_enquiry.html
@@ -20,6 +20,7 @@
                         <li class="list-group-item">
                             <div class="row">
                                 <div class="col-md-8">
+                                    <h4>ID : {{ enquiry.id }}</h4>
                                     <h3>{{ enquiry.name }}</h3>
                                     <p><strong>Email:</strong> {{ enquiry.email }}</p>
                                     <p><strong>Subject:</strong> {{ enquiry.subject }}</p>
