--- a/Clients/templates/Clientsapp/Viewing/view_members.html
+++ b/Clients/templates/Clientsapp/Viewing/view_members.html
@@ -20,6 +20,7 @@
                         <li class="list-group-item">
                             <div class="row">
                                 <div class="col-md-8">
+                                    <h4>ID : {{ member.id }}</h4>
                                     <h3>{{ member.name }}</h3>
                                     <p><strong>Phone:</strong> {{ member.phone }}</p>
                                     <p><strong>Email:</strong> {{ member.email }}</p>
