--- a/Clients/templates/Clientsapp/Viewing/view_enquiry.html
+++ b/Clients/templates/Clientsapp/Viewing/view_enquiry.html
@@ -14,6 +14,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Search</button>
             </form> 
+            <h6 class="text-right mt-2">Today is : {% now "d-m-y" %}</h6>
             <div class="card">
                 <ul class="list-group list-group-flush">
                     {% for enquiry in enquiries %}
@@ -24,8 +25,7 @@
                                     <h3>{{ enquiry.name }}</h3>
                                     <p><strong>Email:</strong> {{ enquiry.email }}</p>
                                     <p><strong>Subject:</strong> {{ enquiry.subject }}</p>
-                                    <p><strong>Message:</strong> {{ enquiry.message }}</p>
-                                    <p><strong>Created On:</strong> {{ enquiry.created_on|date:"F d, Y" }}</p>                                
+                                    <p><strong>Message:</strong> {{ enquiry.message }}</p>                      
                                     {% if request.user.is_staff %}
                                     <form action="{% url 'remove_from_enquiry' enquiry.id %}" method="post">
                                         {% csrf_token %}
