--- a/Clients/templates/Clientsapp/Viewing/view_members.html
+++ b/Clients/templates/Clientsapp/Viewing/view_members.html
@@ -14,6 +14,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Search</button>
             </form>
+            <h6 class="text-right mt-2">Today is : {% now "d-m-y" %}</h6>
             <div class="card">
                 <ul class="list-group list-group-flush">
                     {% for member in members %}
