--- a/Clients/templates/base.html
+++ b/Clients/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Gym Client Management System</title>
+    <title>PowerFit</title>
     <link rel="icon" href="https://cdn.fitimg.in/studio_logo_7C5F98EA46D9B7.jpg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
