--- a/Clients/templates/Clientsapp/Payment/payment_confirmation.html
+++ b/Clients/templates/Clientsapp/Payment/payment_confirmation.html
@@ -2,13 +2,15 @@
 
 {% block title %} Payment Confirmation Page {% endblock %}
 
-{% block content %} <br>
+{% block content %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title text-center mb-4">Payment Confirmation</h1>
+                    <h3 class="text-center">Plan: {{ plan.name }}</h3>
+                    <h4 class="text-center">Amount: {{ plan.amount }} Rs</h4>
                     <p class="card-text text-center">Please proceed with the payment to complete your purchase.</p>
                     <div class="text-center mt-4">
                         <button id="razorpay" type="button" class="btn btn-primary btn-lg">Pay With Razorpay</button>
@@ -36,7 +38,8 @@
                 color: "#bfff80"
             },
             handler: function(response){
-                alert('Payment Successful')
+                alert('Payment Successful');
+                window.location.href = "{% url 'member_detail' member.id %}";
             }
         };
 
@@ -44,5 +47,5 @@
         razor_object.open();
         e.preventDefault();
     });
-</script><br>
+</script>
 {% endblock %}
