updated home page

--- a/Clients/templates/Clientsapp/home.html
+++ b/Clients/templates/Clientsapp/home.html
@@ -13,7 +13,7 @@
         
         <h2 class="mt-5">Join Our Membership :</h2>
         <h2>Our Plans :</h2>
-        <hr>
+        <hr class="my-4">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <ul class="list-group">
@@ -32,14 +32,16 @@
             </div>
         </div>
         <br>
+
         <h2>Visit Our Gym</h2>
+        <hr class="my-4">
         <address><strong>Address: </strong>State Highway 78, near Shri Anant Ice Factory, Chiplun, Maharashtra 415605</address>
         <p><strong>Email: </strong> atharvapawar@gmail.com</p>
         <p><strong>Contact Number: </strong> 9122132435</p>
         
 
         <h2 class="mt-5">Enquiry :</h2>
-        <hr>
+        <hr class="my-4">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <form method="post" enctype="multipart/form-data" id="enquiry-form">
