--- a/Clients/templates/Clientsapp/home.html
+++ b/Clients/templates/Clientsapp/home.html
@@ -25,6 +25,8 @@
                         </div>
                         <div>
                             <h5>{{ plan.amount }} Rs</h5>
+                            <h5 style="text-decoration: line-through; color: rgba(0, 0, 0, 0.525);">{{ plan.discounted_amount }} Rs</h5>
+
                         </div>
                     </li>
                     {% endfor %}
