--- a/Clients/templates/Clientsapp/home.html
+++ b/Clients/templates/Clientsapp/home.html
@@ -11,7 +11,7 @@
         <p class="lead">POWERFIT GYM FOR MEN & WOMEN</p>
         <p>PowerFit Gym Fitness Center provides proper training to transform your body with programs tailored to your body composition.</p>
         
-        <h2 class="mt-5">Join Our Membership :</h2>
+        <h2 class="mt-5">Join Our Membership</h2>
         <h2>Our Plans :</h2>
         <hr class="my-4">
         <div class="row">
